improve encoder support (upto two windows as per .pgs)